--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Elves -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Magic -- Fiction'
+- GITenberg
 title: 'The Red Moccasins: A Story'
 url: http://www.gutenberg.org/ebooks/31252
